--- a/javafx_project/src/main/resources/com/example/client/main-view.fxml
+++ b/javafx_project/src/main/resources/com/example/client/main-view.fxml
@@ -1,21 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.paint.RadialGradient?>
-<?import javafx.scene.paint.Stop?>
-<?import javafx.scene.shape.Circle?>
-<?import javafx.scene.shape.Line?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<Pane fx:id="gameOwner" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="804.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client.controller.GameController">
+<Pane fx:id="gameOwner" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="804.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.client.controller.GameController">
     <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ebcacac2" height="400.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="803.0" />
         <VBox fx:id="statsTable" layoutX="552.0" layoutY="27.0" prefHeight="328.0" prefWidth="134.0" spacing="10.0" />
@@ -57,11 +49,11 @@
             </RadialGradient>
          </fill></Circle>
         <Line endX="100.0" layoutX="-6.0" layoutY="18.0" startX="100.0" startY="290.0" strokeWidth="2.0" />
-        <HBox layoutX="14.0" layoutY="324.0" prefHeight="56.0" prefWidth="527.0">
+        <HBox layoutX="14.0" layoutY="324.0" prefHeight="56.0" prefWidth="641.0">
             <children>
                 <Button fx:id="startButton" focusTraversable="false" mnemonicParsing="false" onAction="#onStartButtonClick" prefHeight="39.0" prefWidth="111.0" text="СТАРТ">
                     <HBox.margin>
-                        <Insets right="50.0" />
+                        <Insets />
                     </HBox.margin>
                <font>
                   <Font name="Bernard MT Condensed" size="13.0" />
@@ -83,6 +75,14 @@
                   <Font name="Berlin Sans FB Bold" size="13.0" />
                </font>
                 </Button>
+            <Button mnemonicParsing="false" onAction="#getLeaders" text="WINNERS">
+               <HBox.margin>
+                  <Insets left="100.0" />
+               </HBox.margin>
+               <padding>
+                  <Insets bottom="10.0" left="30.0" right="30.0" top="20.0" />
+               </padding>
+            </Button>
             </children>
         </HBox>
         <VBox fx:id="playersOwner" alignment="CENTER" fillWidth="false" layoutX="4.0" layoutY="-37.0" prefHeight="390.0" prefWidth="85.0" scaleX="0.7" scaleY="0.7" />
